[package]
name = "phantom_newtype"
description = "Lightweight newtypes without macros."
version = "0.1.0"
authors = ["Roman Kashitsyn <roman.kashitsyn@gmail.com>"]

edition = "2018"
keywords = ["newtype"]
readme = "README.md"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
serde = "1"
