[package]
name = "phantom_newtype"
description = "Lightweight newtypes without macros."
version = "0.2.0"
authors = ["Roman Kashitsyn <roman.kashitsyn@gmail.com>"]
repository = "https://github.com/roman-kashitsyn/phantom-newtype"

edition = "2018"
keywords = ["newtype"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
serde = "1"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true
